--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{E6295C8F-28B6-42AB-8800-B9F4B45ED4A2}</ProjectGuid>
     <RootNamespace>Project2</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -142,8 +142,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Coding Libraries\imgui2xp;C:\Program Files\Java\jdk1.8.0_191\include\win32;C:\Program Files\Java\jdk1.8.0_191\include;E:\Coding Libraries\boost;E:\Coding Libraries\SDL2-2.0.9\include;E:\Coding Libraries\GLEW\include;E:\Coding Libraries\libacfutils-redist\include;E:\Coding Libraries\librain\include;E:\Coding Projects\source\repos\Project2\Project2;E:\X-Plane 11 SDK WIP\SDK\CHeaders\XPLM;E:\X-Plane 11 SDK WIP\SDK\CHeaders\Wrappers;E:\X-Plane 11 SDK WIP\SDK\Libraries\Win;E:\X-Plane 11 SDK WIP\SDK\CHeaders\Widgets;E:\Coding Libraries\C++\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_WINSOCK2API_;_WINDLL;_USRDLL;_WINDOWS;XPLM=1;IBM=1;XPLM200=1;XPLM210=1;XPLM300=1;XPLM301=1;_WINSOCK_DEPRECATED_NO_WARNINGS=1;_CRT_SECURE_NO_WARNINGS;_cplusplus;_DLLMODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>E:\Coding Libraries\SDL2_gfx-1.0.4;E:\Coding Libraries\imgui2xp;C:\Program Files\Java\jdk1.8.0_191\include\win32;C:\Program Files\Java\jdk1.8.0_191\include;E:\Coding Libraries\boost;E:\Coding Libraries\SDL2-2.0.9\include;E:\Coding Libraries\GLEW\include;E:\Coding Libraries\libacfutils-redist\include;E:\Coding Libraries\librain\include;E:\Coding Projects\source\repos\Project2\Project2;E:\X-Plane 11 SDK WIP\SDK\CHeaders\XPLM;E:\X-Plane 11 SDK WIP\SDK\CHeaders\Wrappers;E:\X-Plane 11 SDK WIP\SDK\Libraries\Win;E:\X-Plane 11 SDK WIP\SDK\CHeaders\Widgets;E:\Coding Libraries\C++\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_WINSOCK2API_;_WINDLL;_USRDLL;_WINDOWS;XPLM=1;IBM=1;XPLM200=1;XPLM210=1;XPLM300=1;XPLM301=1;_WINSOCK_DEPRECATED_NO_WARNINGS=1;_CRT_SECURE_NO_WARNINGS;_cplusplus;DLLMODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/MT %(AdditionalOptions)</AdditionalOptions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpp14</LanguageStandard>
@@ -153,8 +153,8 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>jvm.lib;glew32.lib;SDL2_image.lib;SDL2.lib;SDL2main.lib;odbc32.lib;odbccp32.lib;XPLM_64.lib;XPWidgets_64.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\Java\jdk1.8.0_191\lib;E:\Coding Libraries\GLEW\lib\Release\x64;E:\Coding Libraries\SDL2-2.0.9\lib\x64;E:\Coding Libraries\libacfutils-redist\win64\lib;C:\X-Plane 11 SDK WIP\SDK\Libraries\Win;E:\Coding Libraries\librain\win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2_gfx.lib;jvm.lib;glew32.lib;SDL2_image.lib;SDL2.lib;SDL2main.lib;odbc32.lib;odbccp32.lib;XPLM_64.lib;XPWidgets_64.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Coding Libraries\SDL2_gfx-1.0.4\x64\x64;C:\Program Files\Java\jdk1.8.0_191\lib;E:\Coding Libraries\GLEW\lib\Release\x64;E:\Coding Libraries\SDL2-2.0.9\lib\x64;E:\Coding Libraries\libacfutils-redist\win64\lib;C:\X-Plane 11 SDK WIP\SDK\Libraries\Win;E:\Coding Libraries\librain\win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ProjectReference />
     <ProjectReference>
@@ -176,11 +176,13 @@
     <ClCompile Include="globalSingletons\GlobalStore.cpp" />
     <ClCompile Include="globalSingletons\graphicsWrapper.cpp" />
     <ClCompile Include="globalSingletons\PluginRunner.cpp" />
-    <ClCompile Include="globalSingletons\RainEffects.cpp" />
     <ClCompile Include="GraphicsModule.cpp" />
+    <ClCompile Include="graphics\mainRenderer\CockpitRenderer.cpp" />
+    <ClCompile Include="graphics\module\CockpitModule.cpp" />
     <ClCompile Include="graphics\RenderingProgram.cpp" />
     <ClCompile Include="graphics\Shader.cpp" />
     <ClCompile Include="graphics\Texture.cpp" />
+    <ClCompile Include="graphics\textures\TextureStore.cpp" />
     <ClCompile Include="JNIWrapper\FloatingWindow.cpp" />
     <ClCompile Include="JNIWrapper\imgui.cpp" />
     <ClCompile Include="JNIWrapper\ImGUIIntegration.cpp" />
@@ -220,11 +222,13 @@
     <ClInclude Include="globalSingletons\GlobalStore.h" />
     <ClInclude Include="globalSingletons\graphicsWrapper.h" />
     <ClInclude Include="globalSingletons\PluginRunner.h" />
-    <ClInclude Include="globalSingletons\RainEffects.h" />
     <ClInclude Include="GraphicsModule.h" />
+    <ClInclude Include="graphics\mainRenderer\CockpitRenderer.h" />
+    <ClInclude Include="graphics\module\CockpitModule.h" />
     <ClInclude Include="graphics\RenderingProgram.h" />
     <ClInclude Include="graphics\Shader.h" />
     <ClInclude Include="graphics\Texture.h" />
+    <ClInclude Include="graphics\textures\TextureStore.h" />
     <ClInclude Include="JNIWrapper\FloatingWindow.h" />
     <ClInclude Include="JNIWrapper\imconfig.h" />
     <ClInclude Include="JNIWrapper\imgui.h" />
